# models/ReservaContacto.go
@@ -7,7 +7,7 @@ type ReservaContacto struct {
 	NombreCompleto     string   `orm:"column(nombre_completo);type(text)" json:"nombreCompleto"`
 	Telefono           *string  `orm:"column(telefono);type(text);null" json:"telefono,omitempty"`
 	DocumentoContacto  *int64   `orm:"column(documento_contacto);null" json:"documentoContacto,omitempty"`
-	PKDocumentoCliente *Cliente `orm:"column(pk_documento_cliente);rel(fk);null" json:"documentoCliente,omitempty"`
+	PKDocumentoCliente *Cliente `orm:"column(pk_documento_cliente);rel(fk);null" json:"documentoCliente,omitempty" swaggertype:"integer"`
 }
 
 func (r *ReservaContacto) TableName() string {
